plane deform #39206

Closed
opened 2014-03-15 23:45:37 +01:00 by Michael Marlett · 22 comments

System Information
Ubuntu 10 Nvidia geforce 9500
Blender Version
2.70 2nd release candidate
Worked: (optional)

Short description of error
After I track a scene using the plane tracker, and then I go over to the compositor and use the plane track deform node, blender slows down and will not render the image.

Exact steps for others to reproduce the error
Track the scene and use the plane tracker to replace a poster that is on the wall. Then in the compositor use the plane track deform node and use an alpha over node to lay the new poster over the scene.
Then hit F 12 to render the image and Blender will either crash of never stop rendering

**System Information** Ubuntu 10 Nvidia geforce 9500 **Blender Version** 2.70 2nd release candidate Worked: (optional) **Short description of error** After I track a scene using the plane tracker, and then I go over to the compositor and use the plane track deform node, blender slows down and will not render the image. **Exact steps for others to reproduce the error** Track the scene and use the plane tracker to replace a poster that is on the wall. Then in the compositor use the plane track deform node and use an alpha over node to lay the new poster over the scene. Then hit F 12 to render the image and Blender will either crash of never stop rendering

Changed status to: 'Open'

Changed status to: 'Open'
Michael Marlett self-assigned this 2014-03-15 23:45:37 +01:00

Added subscriber: @marlettmichael

Added subscriber: @marlettmichael

Added subscriber: @mont29

Added subscriber: @mont29

Please attach a (smal!) .blend file demonstrating the issue.

Please attach a (smal!) .blend file demonstrating the issue.

Added subscriber: @Sergey

Added subscriber: @Sergey
Michael Marlett was unassigned by Bastien Montagne 2014-03-16 20:33:01 +01:00

I have attached the blend file for the clip that I ran into the problem with.

sign5.4b.blend

I have attached the blend file for the clip that I ran into the problem with. [sign5.4b.blend](https://archive.blender.org/developer/F81632/sign5.4b.blend)

This is a corrupted file -- somehow pointers from the plane track to the point ones become NULL. Do you remember how you've produced such a buggy file?

This is a corrupted file -- somehow pointers from the plane track to the point ones become NULL. Do you remember how you've produced such a buggy file?

I have had this same problem with all my recent plane tracked scenes.
If I open the same .blend file in blender version 2.69 it does not seem to have a problem.
Maybe the code in blender version 2.70 was changed from 2.69 causing this problem.
Because these buggy files work fine in 2.69.

I have had this same problem with all my recent plane tracked scenes. If I open the same .blend file in blender version 2.69 it does not seem to have a problem. Maybe the code in blender version 2.70 was changed from 2.69 causing this problem. Because these buggy files work fine in 2.69.

With the file attached here i see the same exact issue with 2.69. Easy to notice -- just grab plane's corner and slide it. Blender will crash because storage of the point tracks is somehow corrupted.

The issue you're experiencing is likely caused by the same thing why storage was corrupted, so we really need to know how to reproduce such a corrupted file.

With the file attached here i see the same exact issue with 2.69. Easy to notice -- just grab plane's corner and slide it. Blender will crash because storage of the point tracks is somehow corrupted. The issue you're experiencing is likely caused by the same thing why storage was corrupted, so we really need to know how to reproduce such a corrupted file.

Okay I tried reproducing the corrupt file by re tracking the same scene.
My process is this: upload the video clip into the motion tracker, track the corner and add a plane track and move the points to correspond to were they should be in the scene. Then I go to the compositor and use an alpha over node to overly the image over the video clip. Up to this point if I hit F12 blender renders perfectly fine. But once I add the plane deform node blender crashes. Hopefully this is what you wanted.

Okay I tried reproducing the corrupt file by re tracking the same scene. My process is this: upload the video clip into the motion tracker, track the corner and add a plane track and move the points to correspond to were they should be in the scene. Then I go to the compositor and use an alpha over node to overly the image over the video clip. Up to this point if I hit F12 blender renders perfectly fine. But once I add the plane deform node blender crashes. Hopefully this is what you wanted.

Added subscriber: @JonMcKay

Added subscriber: @JonMcKay

I am having the same problem.

I have a video file that tracks fine in the Plane Tracker frame in Video Editor and can be loaded fine in Compositor, but when adding Plane Track node the "Compositing" message shows up in the header with a progress bar that gets stuck about ½ way through. My CPU usage goes through the roof at this point and I have to shut Blender down.

I have Windows 8.1 64bit on an i7 laptop 8G ram.
NVidia 640M card with accelleration turned on.

The problem persists if I instruct my graphics card to not serve Blender, so it's unlikley a GPU issue.

I'll follow up with some files.

I am having the same problem. I have a video file that tracks fine in the Plane Tracker frame in Video Editor and can be loaded fine in Compositor, but when adding Plane Track node the "Compositing" message shows up in the header with a progress bar that gets stuck about ½ way through. My CPU usage goes through the roof at this point and I have to shut Blender down. I have Windows 8.1 64bit on an i7 laptop 8G ram. NVidia 640M card with accelleration turned on. The problem persists if I instruct my graphics card to not serve Blender, so it's unlikley a GPU issue. I'll follow up with some files.

You should be able to duplicate it here: Open the blend file and connect the Plane Track node as per the grease pencil arrows.

https://www.dropbox.com/s/tvs0xxiydwvtrs3/Pack.zip

Cheers,
JM.

You should be able to duplicate it here: Open the blend file and connect the Plane Track node as per the grease pencil arrows. https://www.dropbox.com/s/tvs0xxiydwvtrs3/Pack.zip Cheers, JM.
Sergey Sharybin self-assigned this 2014-04-10 19:09:54 +02:00

@JonMcKay, can confirm plane track being slow in your file. Will have a look.

@marlettmichael, not really. Slow plane track is one issue, but in your original file tweaking plane corners would crash. That;s the issue i wanted to have exact steps to reproduce.

@JonMcKay, can confirm plane track being slow in your file. Will have a look. @marlettmichael, not really. Slow plane track is one issue, but in your original file tweaking plane corners would crash. That;s the issue i wanted to have exact steps to reproduce.

@Sergey , Confirming: The file I posted causes the compositor to slow and freeze when connecting the Plane Track Node.

Please let me know if this is substantially different enough from the original reported problem and I'll create a new bug report.

@Sergey , Confirming: The file I posted causes the *compositor* to slow and freeze when connecting the Plane Track Node. Please let me know if this is substantially different enough from the original reported problem and I'll create a new bug report.

When I open the blend file, and tweak the plane corners Blender does not crash. I never had that problem and so far sergey is the only one who had this problem.
I cannot give you the steps on how to reproduce this problem because I do not have that problem. The only problem I have is blender crashing or slowing way down when I use the plane deform node, just like ammusionist's problem

When I open the blend file, and tweak the plane corners Blender does not crash. I never had that problem and so far sergey is the only one who had this problem. I cannot give you the steps on how to reproduce this problem because I do not have that problem. The only problem I have is blender crashing or slowing way down when I use the plane deform node, just like ammusionist's problem

This issue was referenced by blender/blender-addons-contrib@5a29b55c07

This issue was referenced by blender/blender-addons-contrib@5a29b55c07e34411747c091195a1a1e5fcb1ef7d

This issue was referenced by 5a29b55c07

This issue was referenced by 5a29b55c07e34411747c091195a1a1e5fcb1ef7d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5a29b55c07.

Closed by commit 5a29b55c07.

Thank you Sergey for resolving this bug. Sorry I was not much help but this was my first bug report and I did not really know what to do. Thanks again.
Lets go start tracking again!

Thank you Sergey for resolving this bug. Sorry I was not much help but this was my first bug report and I did not really know what to do. Thanks again. Lets go start tracking again!

You're welcome. Please let me know if you'll have more issues (as a separate report :)

You're welcome. Please let me know if you'll have more issues (as a separate report :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39206
No description provided.