source/blender/compositor/intern/COM_MemoryBuffer.cpp
@@ -288,6 +288,15 @@ void MemoryBuffer::readEWA(float result[4], const float uv[2], const float deriv
 	if (V0 - v1 > EWA_MAXIDX) v1 = V0 - EWA_MAXIDX;
 	if (v2 - V0 > EWA_MAXIDX) v2 = V0 + EWA_MAXIDX;
 
+	/* Early output check for cases the whole region is outside of the buffer. */
+	if ((u2 < m_rect.xmin || u1 >= m_rect.xmax) ||
+	    (v2 < m_rect.ymin || v1 >= m_rect.ymax))
+	{
+		zero_v4(result);
+		return;
+	}
+	/* TODO(sergey): Consider clamping u1/v1/u2/v2 to the m_rect. */
+
 	float DDQ = 2.0f * A;
 	float U = u1 - U0;
 	float ac1 = A * (2.0f * U + 1.0f);
